Set header layout for mobile and desktop, fixed topbar overlapping header issue.

--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -1,10 +1,5 @@
 .site-header {
-    flex-flow: row-reverse;
-    align-content: center;
-    flex: 1 1 0px;
     width: 100%;
-    min-height: 15rem;
-    gap: 1em;
 
     .site-branding {
         position: relative;
@@ -27,8 +22,8 @@
         }
 
         .site-title a {
-            text-decoration: none;
             color: $color__text-screen;
+            text-decoration: none;
             font: $font__black $font__size__header $font__headings;
             line-height: $font__line-height-nav;
 
@@ -38,7 +33,7 @@
             }
         }
 
-        p {
+        .site-description {
             color: $color__text-screen;
             opacity: 0.5;
             font: $font__bold $font__size__subhead $font__headings;
@@ -46,6 +41,42 @@
         }
     }
 }
+
+// Removes site-branding before element on small screens and sets grid placement
+
+@media (max-width: 780px) {
+    .site-header {
+        width: 100%;
+        position: relative;
+        margin-top: 2em;
+
+        .site-branding {
+            grid-column: 1/1;
+            grid-row: 1/3;
+            text-align: center;
+            width: 100%;
+            padding-left: 0;
+            margin: auto;
+            color: $color__text-screen;
+            z-index: 10;
+
+            .site-title a {
+                color: $color__text-screen;
+                opacity: 1;
+            }
+
+            .site-description {
+                color: $color__text-screen;
+                opacity: .75;
+            }
+    
+            &:before {
+                display: none;
+            }
+        }
+    }
+}
+
 
 @import "hero-image";
 @import "custom-logo";
