--- a/sass/layouts/_flex.scss
+++ b/sass/layouts/_flex.scss
@@ -4,10 +4,24 @@
     flex: 1 1 0px;
 }
 
-//Changes from grid to flex layout on small screens
-@media screen and (max-width: 780px) {
+// Changes .site from grid to flex layout on small screens
+@media (max-width: 780px) {
     .site {
         display: flex;
         flex-flow: column wrap;
+    }
+}
+
+// Responsive Header layout for desktop screens
+
+@media (min-width: 781px) {    
+    .site-header {
+        display: flex;
+        flex-wrap: wrap;
+        flex: 1 1 0px;
+        align-content: center;
+        flex: 1 1 0px;
+        // min-height: 25vmax;
+        gap: 1em;
     }
 }
