--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -1,34 +1,46 @@
 /* Grid layout with widget sidebar being displayed on the right. */
 
-.site {
-    display: grid;
-    -ms-grid-columns: 1fr 3fr 1fr;
-    grid-template-columns: 1fr 3fr 1fr;
-    grid-template-areas: 
-        "topbar topbar topbar"
-        "header header header"
-        ". main sidebar"
-        "footer footer footer";
-    grid-gap: 1.5rem;
-
-    .topbar {
-        grid-area: topbar;
+@media (min-width: 781px) {
+    .site {
+        display: grid;
+        -ms-grid-columns: 2.5em 3fr 1fr;
+        grid-template-columns: 1fr 3fr 1fr;
+        grid-template-areas: 
+            "topbar topbar topbar"
+            "header header header"
+            ". main sidebar"
+            "footer footer footer";
+        grid-gap: 2.5rem;
+    
+        .topbar {
+            grid-area: topbar;
+        }
+    
+        .site-header {
+            grid-area: header;
+        }
+    
+        .site-main {
+            grid-area: main;
+            overflow: hidden; /* Resolves issue with <pre> elements forcing full width. */
+        }
+    
+        .widget-area {
+            grid-area: sidebar;
+        }
+    
+        .site-footer {
+            grid-area: footer;
+        }
     }
+}
 
-    .site-header {
-        grid-area: header;
-    }
+// Grid Header settings for smaller screens
 
-    .site-main {
-        grid-area: main;
-        overflow: hidden; /* Resolves issue with <pre> elements forcing full width. */
-    }
-
-    .widget-area {
-        grid-area: sidebar;
-    }
-
-    .site-footer {
-        grid-area: footer;
-    }
+@media (max-width: 780px) {
+   .site-header {
+       display: grid;
+       grid-template-columns: auto 1fr;
+       grid-template-rows: auto;
+   }
 }
