--- a/style.css
+++ b/style.css
@@ -715,7 +715,7 @@ textarea {
           flex: 1 1 0px;
 }
 
-@media screen and (max-width: 780px) {
+@media (max-width: 780px) {
   .site {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -727,49 +727,74 @@ textarea {
   }
 }
 
+@media (min-width: 781px) {
+  .site-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 0px;
+            flex: 1 1 0px;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    flex: 1 1 0px;
+    gap: 1em;
+  }
+}
+
 /* Grid layout with widget sidebar being displayed on the right. */
-.site {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 3fr 1fr;
-  grid-template-columns: 1fr 3fr 1fr;
-      grid-template-areas: "topbar topbar topbar" "header header header" ". main sidebar" "footer footer footer";
-  grid-gap: 1.5rem;
+@media (min-width: 781px) {
+  .site {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 2.5em 3fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
+        grid-template-areas: "topbar topbar topbar" "header header header" ". main sidebar" "footer footer footer";
+    grid-gap: 2.5rem;
+  }
+  .site .topbar {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-area: topbar;
+  }
+  .site .site-header {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-area: header;
+  }
+  .site .site-main {
+    -ms-grid-row: 3;
+    -ms-grid-column: 2;
+    grid-area: main;
+    overflow: hidden;
+    /* Resolves issue with <pre> elements forcing full width. */
+  }
+  .site .widget-area {
+    -ms-grid-row: 3;
+    -ms-grid-column: 3;
+    grid-area: sidebar;
+  }
+  .site .site-footer {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-area: footer;
+  }
 }
 
-.site .topbar {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-area: topbar;
-}
-
-.site .site-header {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-area: header;
-}
-
-.site .site-main {
-  -ms-grid-row: 3;
-  -ms-grid-column: 2;
-  grid-area: main;
-  overflow: hidden;
-  /* Resolves issue with <pre> elements forcing full width. */
-}
-
-.site .widget-area {
-  -ms-grid-row: 3;
-  -ms-grid-column: 3;
-  grid-area: sidebar;
-}
-
-.site .site-footer {
-  -ms-grid-row: 4;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-area: footer;
+@media (max-width: 780px) {
+  .site-header {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto 1fr;
+        grid-template-columns: auto 1fr;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -778,18 +803,7 @@ textarea {
 /* Header
 --------------------------------------------- */
 .site-header {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-flow: row-reverse;
-          flex-flow: row-reverse;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 0px;
-          flex: 1 1 0px;
   width: 100%;
-  min-height: 15rem;
-  gap: 1em;
 }
 
 .site-header .site-branding {
@@ -820,8 +834,8 @@ textarea {
 }
 
 .site-header .site-branding .site-title a {
-  text-decoration: none;
   color: #000;
+  text-decoration: none;
   font: 700 calc( 1.5rem + 5vmin) Sarabun, Helvetica, sans-serif;
   line-height: 1;
 }
@@ -830,11 +844,83 @@ textarea {
   color: #000;
 }
 
-.site-header .site-branding p {
+.site-header .site-branding .site-description {
   color: #000;
   opacity: 0.5;
   font: 500 calc( 1rem + 1vmin) Sarabun, Helvetica, sans-serif;
   margin: 0;
+}
+
+@media (max-width: 780px) {
+  .site-header {
+    width: 100%;
+    position: relative;
+    margin-top: 2em;
+  }
+  .site-header .site-branding {
+    -ms-grid-column: 1;
+    grid-column: 1/1;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1/3;
+    text-align: center;
+    width: 100%;
+    padding-left: 0;
+    margin: auto;
+    color: #000;
+    z-index: 10;
+  }
+  .site-header .site-branding .site-title a {
+    color: #000;
+    opacity: 1;
+  }
+  .site-header .site-branding .site-description {
+    color: #000;
+    opacity: .75;
+  }
+  .site-header .site-branding:before {
+    display: none;
+  }
+}
+
+.hero-image {
+  width: 50%;
+  height: auto;
+  position: relative;
+}
+
+.hero-image img {
+  display: block;
+  position: relative;
+  width: 60%;
+  height: auto;
+  margin: auto 0 auto auto;
+}
+
+@media (max-width: 780px) {
+  .hero-image {
+    -ms-grid-column: 1;
+    grid-column: 1/1;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1/3;
+    width: 100%;
+    z-index: 5;
+    opacity: .5;
+  }
+  .hero-image img {
+    width: 100%;
+  }
+}
+
+.custom-logo-link {
+  width: 2em;
+  height: 2em;
+}
+
+.custom-logo-link .custom-logo {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 /* Navigation
@@ -941,6 +1027,7 @@ nav ul li:hover > ul {
       align-content: center;
   position: fixed;
   height: 2rem;
+  line-height: 1;
   width: 100%;
   outline: 2px solid rgba(97, 150, 77, 0.1);
   background: #49743a;
